<resources>
    <string name="app_name">MedEase</string>
    <string name="medease">Medease</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="med_ease">MedEase</string>
    <string name="create_your_account">Create your account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Already_have_an_account">alreadyhaveanavccount</string>
    <string name="log_in">log in</string>
    <string name="signin">Signin</string>
    <string name="specialisation">Specialisation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>