<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SecondActivity2">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:alpha="0.3"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/webdoc"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="cursive"
            android:text="@string/med_ease"
            android:textColor="#1B739E"
            android:textSize="50sp"
            android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginTop="125dp"/>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="220dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="320dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="420dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignin"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:layout_marginTop="600dp"
            android:layout_marginStart="150dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="700dp"
                android:text="@string/Already_have_an_account"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="700dp"
                android:text="@string/log_in"
                android:textColor="#238327" />


        </LinearLayout>








    </androidx.cardview.widget.CardView>



</RelativeLayout>